--- a/templates/back/manager/index.html
+++ b/templates/back/manager/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2021-09-19 11:01:49
- * @LastEditTime: 2021-09-19 11:14:25
- * @LastEditors: your name
+ * @LastEditTime: 2021-09-20 18:28:14
+ * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: /saas/templates/back/manager/index.html
 -->
