--- a/templates/back/role/index.html
+++ b/templates/back/role/index.html
@@ -1,10 +1,6 @@
 
-{{ define "admin/role/index.html" }}
-{{ template "admin/public/page_header.html" .}}
-               
-    <!--
-        列表展示
-    -->
+{{ define "back/role/index.html" }}
+{{ template "back/public/header.html" .}}
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
@@ -18,17 +14,14 @@
             </thead>
             <tbody>
 
-             {{range $key,$value := .roleList}}   
+
             <tr>
-                <td>{{$value.Title}}</td>               
-                <td>{{$value.Description}}</td>
-                <td>{{$value.Status}}</td>              
+
                 <td class="text-center">
-                    <a href="/admin/role/edit?id={{$value.Id}}">修改</a> 
-                    <a class="delete" href="/admin/role/delete?id={{$value.Id}}">删除</a>
+                    <a href="">修改</a>
+                    <a class="delete" href="">删除</a>
                 </td>
-            </tr>             
-            {{end}}   
+            </tr>
             </tbody>
         </table>
     </div>
