--- a/templates/back/role/add.html
+++ b/templates/back/role/add.html
@@ -1,8 +1,5 @@
-{{ define "admin/role/add.html" }}
-{{ template "admin/public/page_header.html" .}}
-
-
-
+{{ define "back/role/add.html" }}
+{{ template "back/public/header.html" .}}
 <div class="panel panel-default">
     <div class="panel-heading">
       增加角色
@@ -12,29 +9,20 @@
             <form action="/admin/role/doAdd" method="post">
                 <ul>
                     <li> 角色名称: <input type="text" name="title" /></li>
-
-
                     <li>
                         角色描述:
                         <textarea name="description" id="" cols="60" rows="8"></textarea>
                     </li>
-
                     <li>
                         <br />
                         <button type="submit" class="btn btn-default">提交</button>
                     </li>
 
                 </ul>
-
-
             </form>
         </div>
     </div>
-
-
 </div>
-
-
 </body>
 
 </html>
