--- a/templates/back/public/error.html
+++ b/templates/back/public/error.html
@@ -1,4 +1,4 @@
-{{ define "admin/public/error.html" }}
+{{ define "back/public/error.html" }}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="refresh" content="3;url={{.redirectUrl}}">
     <title>提示信息</title>
-    <link rel="stylesheet" href="/static/admin/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/static/back/bootstrap/css/bootstrap.css">
 </head>
 
 <body>
@@ -17,16 +17,10 @@
                 <h2>操作失败: {{.message}}!</h2>
                 <br />
                 <p>如果您不做出选择，3秒后将自动返回上一个页面</p>
-                
                 <br />
-
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
-
-
 {{ end }}
