--- a/templates/back/role/edit.html
+++ b/templates/back/role/edit.html
@@ -1,7 +1,5 @@
-{{ define "admin/role/edit.html" }}
-{{ template "admin/public/page_header.html" .}}
-
-
+{{ define "back/role/edit.html" }}
+{{ template "back/public/header.html" .}}
 
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -13,21 +11,15 @@
                 <input type="hidden" name="id" value="{{.role.Id}}">
                 <ul>
                     <li> 角色名称: <input type="text" name="title" value="{{.role.Title}}" /></li>
-
-
                     <li>
                         角色描述:
                         <textarea name="description" id="" cols="60" rows="8">{{.role.Description}}</textarea>
                     </li>
-
                     <li>
                         <br />
                         <button type="submit" class="btn btn-default">提交</button>
                     </li>
-
                 </ul>
-
-
             </form>
         </div>
     </div>
