--- a/templates/back/role/index.html
+++ b/templates/back/role/index.html
@@ -22,7 +22,7 @@
                 <td>{{$value.AddTime}}</td>
                 <td class="text-center">
                     <a href="/admin/role/edit?id={{$value.Id}}">修改</a>
-                    <a class="delete" href="">删除</a>
+                    <a class="delete" href="/admin/role/delete?id={{$value.Id}}">删除</a>
                 </td>
             </tr>
             {{end}}
