--- a/templates/back/manager/add.html
+++ b/templates/back/manager/add.html
@@ -1,43 +1,42 @@
-{{ define "admin/manager/add.html" }}
-{{ template "admin/public/page_header.html" .}}
-
-
-
+{{ define "back/manager/add.html" }}
+{{ template "back/public/header.html" .}}
 <div class="panel panel-default">
     <div class="panel-heading">
         增加管理员
     </div>
     <div class="panel-body">
         <div class="table-responsive input-form">
-            <form action="/doAdd" method="post">
-                <ul>
-                    <li> 商品名称: <input type="text" name="title" /></li>
-
-                    <li> 商品图片: <input type="file" name="pic" /></li>
-                    <li> 商品价格: <input type="text" name="price" /></li>
-                    <li> 商品邮费: <input type="text" name="fee" /></li>
-
-                    <li>
-                        商品描述:
-                        <textarea name="description" id="" cols="60" rows="8"></textarea>
-                    </li>
-
-                    <li>
-                        <br />
-                        <button type="submit" class="btn btn-default">提交</button>
-                    </li>
-
-                </ul>
-
+            <form role="form" action="/admin/manager/doAdd" method="post">
+                <div class="form-group">
+                    <label for="name">名称</label>
+                    <input type="text" class="form-control" id="name" name="username" placeholder="请输入名称">
+                </div>
+                <div class="form-group">
+                    <label for="password">密码</label>
+                    <input type="text" class="form-control" name="password" id="password" placeholder="请输入密码">
+                </div>
+                <div class="form-group">
+                    <label for="mobile">电话</label>
+                    <input type="text" class="form-control" name="mobile" id="mobile" placeholder="请输入电话">
+                </div>
+                <div class="form-group">
+                    <label for="email">邮件</label>
+                    <input type="text" class="form-control" name="email" id="email" placeholder="请输入邮件">
+                </div>
+                <div class="form-group">
+                    <label for="email">角色</label>
+                    <select class="form-control" name="role_id">
+                        {{range $key,$value := .roles}}
+                            <option value="{{$value.Id}}">{{$value.Title}}</option>
+                        {{end}}
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-default">提交</button>
 
             </form>
         </div>
     </div>
-
-
 </div>
-
-
 </body>
 
 </html>
