--- a/templates/back/manager/index.html
+++ b/templates/back/manager/index.html
@@ -26,7 +26,7 @@
             <td>{{$value.Username}}</td>
             <td>{{$value.Mobile}}</td>
             <td>{{$value.Email}}</td>
-            <td>{{$value.RoleId}}</td>
+            <td>{{$value.Role.Title}}</td>
             <td class="text-center">
                 <a href="/admin/manager/edit?id={{$value.Id}}">修改</a>
                 <a href="/admin/manager/delete?id={{$value.Id}}">删除</a>
