--- a/templates/back/focus/index.html
+++ b/templates/back/focus/index.html
@@ -1,27 +1,6 @@
 
-{{ define "admin/focus/index.html" }}
-{{ template "admin/public/page_header.html" .}}
-           
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            搜索
-        </div>
-        <div class="panel-body">
-            <form role="form" class="form-inline">
-                <div class="form-group">
-                    <label for="name">名称</label>
-                    <input type="text" class="form-control" id="name" placeholder="请输入名称">
-                </div>
-
-                <div class="form-group">
-                    <button type="submit" class="btn btn-default">开始搜索</button>
-                </div>
-            </form>
-        </div>
-    </div>
-    <!--
-        列表展示
-    -->
+{{ define "back/focus/index.html" }}
+{{ template "back/public/header.html" .}}
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
