--- a/templates/back/focus/add.html
+++ b/templates/back/focus/add.html
@@ -9,8 +9,7 @@
     </div>
     <div class="panel-body">
         <div class="table-responsive input-form">
-            <form action="/admin/focus/doAdd" method="post">
-
+            <form action="/admin/focus/doAdd" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">名称</label>
                     <input type="text" class="form-control" id="name" name="username" placeholder="请输入名称">
