--- a/templates/back/focus/edit.html
+++ b/templates/back/focus/edit.html
@@ -10,6 +10,7 @@
     <div class="panel-body">
         <div class="table-responsive input-form">
             <form action="/doAdd" method="post">
+                {{range $key,$value := .focus}}
                 <ul>
                     <li> 商品名称: <input type="text" name="title" /></li>
 
@@ -26,10 +27,8 @@
                         <br />
                         <button type="submit" class="btn btn-default">提交</button>
                     </li>
-
                 </ul>
-
-
+                {{end}}
             </form>
         </div>
     </div>
