--- a/templates/back/focus/index.html
+++ b/templates/back/focus/index.html
@@ -18,7 +18,7 @@
                 <td>{{$value.Name}}</td>
                 <td>{{$value.Link}}</td>
                 <td>{{$value.FocusType}}</td>
-                <td><img src="http://localhost:8080/{{$value.Img}}"/></td>
+                <td><img src="/{{$value.Img}}"/></td>
                 <td class="text-center">修改  删除</td>
             </tr>
             {{end}}
