--- a/templates/back/focus/index.html
+++ b/templates/back/focus/index.html
@@ -19,7 +19,10 @@
                 <td>{{$value.Link}}</td>
                 <td>{{$value.FocusType}}</td>
                 <td><img src="/{{$value.Img}}"/></td>
-                <td class="text-center">修改  删除</td>
+                <td class="text-center">
+                    <a href="/admin/focus/edit?id={{$value.Id}}">修改</a>
+                    <a href="/admin/focus/delete?id={{$value.Id}}">删除</a>
+                </td>
             </tr>
             {{end}}
             </tbody>
