--- a/templates/back/focus/edit.html
+++ b/templates/back/focus/edit.html
@@ -1,39 +1,37 @@
-{{ define "admin/focus/edit.html" }}
-{{ template "admin/public/page_header.html" .}}
-
-
+{{ define "back/focus/edit.html" }}
+{{ template "back/public/header.html" .}}
 
 <div class="panel panel-default">
     <div class="panel-heading">
-       修改轮播图
+        修改轮播图
     </div>
     <div class="panel-body">
         <div class="table-responsive input-form">
-            <form action="/doAdd" method="post">
-                {{range $key,$value := .focus}}
-                <ul>
-                    <li> 商品名称: <input type="text" name="title" /></li>
-
-                    <li> 商品图片: <input type="file" name="pic" /></li>
-                    <li> 商品价格: <input type="text" name="price" /></li>
-                    <li> 商品邮费: <input type="text" name="fee" /></li>
-
-                    <li>
-                        商品描述:
-                        <textarea name="description" id="" cols="60" rows="8"></textarea>
-                    </li>
-
-                    <li>
-                        <br />
-                        <button type="submit" class="btn btn-default">提交</button>
-                    </li>
-                </ul>
-                {{end}}
+            <form action="/admin/focus/doAdd" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="name">名称</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="请输入名称">
+                </div>
+                <div class="form-group">
+                    <label for="focus_type">名称</label>
+                    <select class="form-control" name="focus_type" id="focus_type">
+                        <option value="1">网站</option>
+                        <option value="2">App</option>
+                        <option value="3">小程序</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="link">链接</label>
+                    <input type="text" class="form-control" id="link" name="link" placeholder="请输入链接地址">
+                </div>
+                <div class="form-group">
+                    <label for="img">图片</label>
+                    <input type="file" class="form-control" name="img" id="img">
+                </div>
+                <button type="submit" class="btn btn-default">提交</button>
             </form>
         </div>
     </div>
-
-
 </div>
 
 
