--- a/templates/back/focus/edit.html
+++ b/templates/back/focus/edit.html
@@ -7,26 +7,28 @@
     </div>
     <div class="panel-body">
         <div class="table-responsive input-form">
-            <form action="/admin/focus/doAdd" method="post" enctype="multipart/form-data">
+            <form action="/admin/focus/doEdit" method="post" enctype="multipart/form-data">
+                <input type="hidden" value="{{.focus.Id}}" name="id">
                 <div class="form-group">
                     <label for="name">名称</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="请输入名称">
+                    <input value="{{.focus.Name}}" type="text" class="form-control" id="name" name="name" placeholder="请输入名称">
                 </div>
                 <div class="form-group">
-                    <label for="focus_type">名称</label>
+                    <label for="focus_type">类型</label>
                     <select class="form-control" name="focus_type" id="focus_type">
-                        <option value="1">网站</option>
-                        <option value="2">App</option>
-                        <option value="3">小程序</option>
+                        <option {{if eq .focus.FocusType 1}} selected {{end}} value="1">网站</option>
+                        <option {{if eq .focus.FocusType 2}} selected {{end}} value="2">App</option>
+                        <option {{if eq .focus.FocusType 3}} selected {{end}} value="3">小程序</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="link">链接</label>
-                    <input type="text" class="form-control" id="link" name="link" placeholder="请输入链接地址">
+                    <input value="{{.focus.Link}}" type="text" class="form-control" id="link" name="link" placeholder="请输入链接地址">
                 </div>
                 <div class="form-group">
                     <label for="img">图片</label>
-                    <input type="file" class="form-control" name="img" id="img">
+                    <input type="file" class="form-control" name="img" id="img"><br/>
+                    <img src="/{{.focus.Img}}" style="width: 300px;height: 120px"/>
                 </div>
                 <button type="submit" class="btn btn-default">提交</button>
             </form>
