--- a/templates/back/focus/index.html
+++ b/templates/back/focus/index.html
@@ -18,7 +18,7 @@
                 <td>{{$value.Name}}</td>
                 <td>{{$value.Link}}</td>
                 <td>{{$value.FocusType}}</td>
-                <td><img src="/{{$value.Img}}"/></td>
+                <td><img style="width: 200px;height: 60px" src="/{{$value.Img}}"/></td>
                 <td class="text-center">
                     <a href="/admin/focus/edit?id={{$value.Id}}">修改</a>
                     <a href="/admin/focus/delete?id={{$value.Id}}">删除</a>
